--- a/Liventer/index.html
+++ b/Liventer/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/img/liventer_s.svg" />
+    <link rel="icon" type="image/svg+xml" href="/img/liventer_s.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/Styles/index.css">
+
     <title>Liventer Group</title>
   </head>
   <body>
