--- a/Liventer/index.html
+++ b/Liventer/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/img/liventer_s.svg" />
+  <link rel="icon" type="image/svg+xml" href="/img/GM_productions.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./src/Styles/index.css">
 
-  <title>Liventer Group</title>
+  <title>GM Productions</title>
 </head>
 
 <body>
